Use Exif orientation when creating ImageBitmap from Blob https://bugs.webkit.org/show_bug.cgi?id=223326

Reviewed by Kenneth Russell and Kimmo Kinnunen.

Do not ignore embedded Exif orientation metadata
when creating ImageBitmap from Blob.

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/html/canvas/element/manual/imagebitmap/imagebitmap-replication-exif-orientation-expected.txt:
* Source/WebCore/html/ImageBitmap.cpp:
(WebCore::ImageBitmap::createFromBuffer):

Canonical link: https://commits.webkit.org/253004@main